# hiwave

./: .claude-session-notes.md  .gitignore  .gitmodules  CLAUDE.md  README.md  SESSION_SUMMARY.md
.github/workflows/: churn-report.yml  metrics.yml  nightly-release.yml  nightly-release.yml.txt  parity-unified.yml  performance-test.yml  scheduled-release.yml  scheduled-release.yml.txt
churn-reports/: churn_data_20260110_195559.json  churn_data_20260111_031612.json  churn_data_20260118_000715.json  churn_data_20260118_040421.json  churn_data_20260125_000705.json  churn_data_20260125_042148.json  churn_data_20260201_000902.json  churn_data_20260201_051716.json  churn_data_20260208_001254.json  churn_data_20260208_024654.json  dashboard.html  dashboard_20260111_031612.html  dashboard_20260118_000715.html  dashboard_20260118_040421.html  dashboard_20260125_000705.html  dashboard_20260125_042148.html  dashboard_20260201_000902.html  dashboard_20260201_051716.html  dashboard_20260208_001254.html  dashboard_20260208_024654.html  report_20260110_195559.md  report_20260111_031612.md  report_20260118_000715.md  report_20260118_040421.md  report_20260125_000705.md  report_20260125_042148.md  report_20260201_000902.md  report_20260201_051716.md  report_20260208_001254.md  report_20260208_024654.md
community/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_ROADMAP.md  README.md  ROADMAP.md
hiwave/: README.md
metrics/: parity_results.json  unified.json
scripts/: aggregate_parity_results.py  collect_metrics.py  generate_badges.py  generate_charts.py
test-infrastructure/: IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  config.toml  quickstart.ps1  requirements.txt
test-infrastructure/harness/: Cargo.toml  results.json  test-results.json  test.json
test-infrastructure/harness/src/: main.rs  metrics.rs  renderers.rs  statistics.rs  test_suite.rs
(+38 files in other folders)
