[package]
name = "hiwave-test-harness"
version = "0.1.0"
edition = "2021"
authors = ["HiWave Team"]

[[bin]]
name = "hiwave-perf"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Randomization for Monte Carlo
rand = "0.8"

# Statistics
statistical = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

# System info
sysinfo = "0.32"

[dev-dependencies]
tempfile = "3.8"
