[package]
name = "hiwave-test-harness"
version = "0.1.0"
edition = "2021"
authors = ["HiWave Team"]

[[bin]]
name = "hiwave-perf"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Randomization for Monte Carlo
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# RustKit dependencies - pointing to submodule
# Path is relative from test-infrastructure/harness/ to root-level submodules
# ../../hiwave-windows/crates/rustkit-dom
rustkit-dom = { path = "../../hiwave-windows/crates/rustkit-dom" }
rustkit-css = { path = "../../hiwave-windows/crates/rustkit-css" }
rustkit-layout = { path = "../../hiwave-windows/crates/rustkit-layout" }

[dev-dependencies]
tempfile = "3.8"
